deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wahyu

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-wahyu
  namespace: wahyu
  labels:
    name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: backend-pod
  template:
    metadata:
      name: backend-wahyu
      labels:
        name: backend-pod
    spec:
      containers:
        - name: backend
          image: wsaefulloh/backend-sejutacita:latest
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wahyu
spec:
  selector:
    name: backend-pod
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sejutacita-ingress
  namespace: wahyu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - #host domain
      secretName: secret-sejutacita-tls
  rules:
    - host: #host domain
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 9000
